PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
/*@import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css";*/

/* Tooltip container */
.tooltip {
  position: relative;
  display: inline-block;
  /*border-bottom: 1px dotted black; */
  cursor: pointer;
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  background-color:  var(--color-primary);
  color: var(--color-background);
  text-align: center;
  padding: 10px 10px;
  border-radius: 4px;
 
  /* Position the tooltip text - see examples below! */
  position: absolute;
  z-index: 1;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

#content .image_div {
  margin: 0 auto;
  position: absolute;
}
#contentModall .image_div {
    margin: 0 auto;
    /* Commented to fix long modals
    position: absolute;
    */
  }

.image_div img {
  /*-webkit-transform:translate3d(0,0,0);*/
}

/*** MAPS ***/
.linksDiv {
  width: 100%;
  position: absolute;
  z-index: 2;
}

.linkDiv {
  position: absolute;
  cursor: pointer;
  opacity: 0;
  transition: opacity 0.5s;
  background-color: #FFC400;
  pointer-events: auto;
}

.linkHoverDiv {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  transition: opacity 0.5s;
  background-color: #FFC400;
  pointer-events: auto;
}

.linkDivHighlight:hover {
  opacity: 0.2;
  transition: opacity 0.5s;
}

.contentLinksVisible .linkDiv {
  opacity: 0.4;
  transition: opacity 0.5s;
}

/************ SYMBOLS ******/
.symbolLink {}

.modalSymbolLink {}

.symbolDiv {
  position: absolute;
  display: none;
  z-index: 30;
}

.contentSymbolsVisible .symbolDiv:hover {
  opacity: 1;
  outline: 1px dashed red;
  outline-offset: -1px;
  background-color: rgba(255, 0, 0, .05);
  transition: all 0.3s;
}

.contentSymbolsVisible .symbolDiv {
  opacity: .3;
  display: block;
  cursor: pointer;
  /*border: 1px dashed red;   */
  outline: 1px solid red;
  outline-offset: -1px;
  transition: all 0.3s;
}

.svBorderLineDiv {
    position: absolute;
    display: none;
    z-index: 30;
}
.contentSymbolsVisible .svBorderLineDiv {
    display: block;
    cursor: pointer;
    outline: 1px dashed red;
    outline-offset: -1px;
    transition: all 0.3s;
}


.svMarginLineDiv {
    position: absolute;
    display: none;
    z-index: 31;
}
.contentSymbolsVisible .svMarginLineDiv {
    display: block;
    cursor: pointer;
    outline: 1px solid var(--color-accent);
    outline-offset: -1px;
    transition: all 0.3s;
}

.svMarginValueDiv {
    position: absolute;
    display: none;
    z-index: 32;
}
.contentSymbolsVisible .svMarginValueDiv {
    display: block;
    cursor: pointer;
    border-radius: 4px;
    height: 16px;
    width:30px;
    line-height: 16px;
    font-weight: 500;
    background-color: var(--color-accent);
    transition: all 0.3s;
    font-size:10px;
    color:white;
}

#comments_viewer,
#symbol_viewer,
#version_viewer {
  width: 100%;
  overflow-y: auto;
  padding-bottom: 20px;
}

select{
  height: 32px;
  width: 100%;
  font-size: var(--font-small);
  color: var(--color-primary);
  border: none;
  border-radius: 5px;
  background: var(--color-hover);
  cursor: pointer;
  text-indent: 4px;
  transition: all .12s;

  /* reset */
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;

  padding: 0px 8px;
}

select:hover{
  background: var(--color-hover-bright);
  /* color: white; */
  transition: all .2s;
}

select:focus{
  outline: none;
}

.checkbox-container{
  display: flex;
  align-items: center;
  justify-content:flex-start;
	position: relative;
  height: 36px;
  font-size: 14px;
}

.checkbox-container label{
  background-color: var(--color-active);
	border-radius: 20px;
	display: inline-block;
	position: relative;
	transition: all 0.2s ease-out;
	width: 28px;
	height: 16px;
	z-index: 2;
  cursor: pointer;
}

#gallery-modal .checkbox-container label {
  background-color: rgba(255,255,255,.12);
}

.checkbox-container label::after {
	content: ' ';
  background-color: rgb(255, 255, 255);
	border-radius: 50%;
	position: absolute;
	top: 2px;
	left: 2px;
	transform: translateX(0);
	transition: transform 0.12s linear;
	width: 12px;
	height: 12px;
	z-index: 3;
  /* box-shadow: var(--shadow1); */
  transition: all .2s;
}

.checkbox-container label:hover::after{
  transition: all .12s;
}

.checkbox-container input {
	visibility: hidden;
	position: absolute;
	z-index: 2;
}

.checkbox-container input:checked + label::after {
	transform: translateX(calc(100% + 0.5px));
  background-color: #fff;
}

.checkbox-container input:checked + label {
	background-color: var(--color-accent);
}

#gallery-modal .checkbox-container input:checked + label {
	background-color: var(--color-accent);
}

.checkbox-container .checkbox-label{
  margin-left: 12px;
}

#symbol_viewer .checkbox-container {
  padding: 16px 20px 0px 20px;
}

#gallery-modal .checkbox-container {
  margin-right: 40px;
}

#comments_viewer .title, 
#symbol_viewer .title, 
#version_viewer .title {
  height: 56px;
  display: flex;
  align-items: center;
  position: fixed;
  box-sizing:border-box;
  width: 400px;
  padding: 0 20px;
  background: var(--color-background);
  font-weight: var(--font-weight-bold);
  border-bottom: solid 1px var(--color-border);
  z-index: 10;
}

#comments_viewer_content{
  padding: 72px 20px 0 20px;
}

#symbol_viewer_content .block{
  padding: 16px 20px 0 20px;
}

#symbol_viewer_content .block.twoColumn{
  display: flex;
}

.tokenName{
  /* color: aquamarine; */
  color: var(--color-accent);
  white-space: nowrap;
}

.tokenValue{
  color: var(--color-secondary);
  margin-left: 10px;
}

.twoColumn div{
  width: 50%;
}

#symbol_viewer_content .label{
  color: var(--color-secondary);
}

#symbol_viewer_content .value{
  padding-top: 8px;
}

#symbol_viewer_content .value.code{
  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 12px;
  line-height: 18px;
}
/* ... */

